{
  "version": 4,
  "terraform_version": "1.9.8",
  "serial": 30,
  "lineage": "ae9a7551-1732-25df-782d-f2c7065ddf84",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "debian_ec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-12345678",
            "arn": "arn:aws:ec2:sa-east-1::instance/i-f306031d768bdb660",
            "associate_public_ip_address": false,
            "availability_zone": "sa-east-1a",
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-f306031d768bdb660",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "VExpenses-SeuNome-key",
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-3f2651e3",
            "private_dns": "ip-10-0-1-4.sa-east-1.compute.internal",
            "private_ip": "10.0.1.4",
            "public_dns": "None",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 0,
                "throughput": 0,
                "volume_id": "vol-0e3610a5",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0a952821",
            "tags": {
              "Name": "VExpenses-SeuNome-ec2"
            },
            "tags_all": {
              "Name": "VExpenses-SeuNome-ec2"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false
          },
          "dependencies": [
            "aws_key_pair.ec2_key_pair",
            "aws_subnet.main_subnet",
            "aws_vpc.main_vpc",
            "tls_private_key.ec2_key"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:sa-east-1:000000000000:internet-gateway/igw-c0f9295e",
            "id": "igw-c0f9295e",
            "owner_id": "000000000000",
            "tags": {
              "Name": "VExpenses-SeuNome-igw"
            },
            "tags_all": {
              "Name": "VExpenses-SeuNome-igw"
            },
            "vpc_id": "vpc-53231e63"
          },
          "dependencies": [
            "aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "main_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:sa-east-1:000000000000:route-table/rtb-69aa1e5c",
            "id": "rtb-69aa1e5c",
            "owner_id": "000000000000",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-c0f9295e",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "VExpenses-SeuNome-route_table"
            },
            "tags_all": {
              "Name": "VExpenses-SeuNome-route_table"
            },
            "timeouts": null,
            "vpc_id": "vpc-53231e63"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.main_igw",
            "aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "main_route_table_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-5007ae13",
            "route_table_id": "rtb-69aa1e5c",
            "subnet_id": "subnet-0a952821"
          },
          "dependencies": [
            "aws_internet_gateway.main_igw",
            "aws_route_table.main_route_table",
            "aws_subnet.main_subnet",
            "aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "main_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:sa-east-1:000000000000:security-group/sg-c27fd280f53f57024",
            "description": "Permitir SSH de qualquer lugar e todo o tráfego de saída",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all outbound traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-c27fd280f53f57024",
            "ingress": [
              {
                "cidr_blocks": [
                  "45.231.138.199/32"
                ],
                "description": "Allow SSH from anywhere",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "VExpenses-SeuNome-sg",
            "name_prefix": "",
            "owner_id": "000000000000",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "VExpenses-SeuNome-sg"
            },
            "tags_all": {
              "Name": "VExpenses-SeuNome-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-53231e63"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "main_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:sa-east-1:000000000000:subnet/subnet-0a952821",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "sa-east-1a",
            "availability_zone_id": "sae1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a952821",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "000000000000",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "VExpenses-SeuNome-subnet"
            },
            "tags_all": {
              "Name": "VExpenses-SeuNome-subnet"
            },
            "vpc_id": "vpc-53231e63"
          },
          "dependencies": [
            "aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:sa-east-1:000000000000:vpc/vpc-53231e63",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-63c8d21a",
            "default_route_table_id": "rtb-b2513cff",
            "default_security_group_id": "sg-dc2b87fcb4adb9552",
            "dhcp_options_id": "default",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-53231e63",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-b2513cff",
            "owner_id": "000000000000",
            "tags": {
              "Name": "VExpenses-SeuNome-vpc"
            },
            "tags_all": {
              "Name": "VExpenses-SeuNome-vpc"
            }
          }
        }
      ]
    }
  ]
}